--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -326,7 +326,7 @@
     <string name="location_is_not_accurate">Location received is not accurate enough</string>
     <string name="adventure_not_in_a_valid_location">You are not in a valid place</string>
     <string name="adventure_confirm_location">Click in the circle to confirm your location</string>
-    <string name="downloading_your_grades">Downloading grades from previous semesters</string>
+    <string name="downloading_your_grades">Previous semesters grades will be downloaded asynchronously</string>
     <string name="about_app_frequently_asked_questions">Frequently Asked Questions</string>
     <string name="cd_icon">icon</string>
     <string name="cd_download">download</string>
