--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -501,4 +501,7 @@
     <string name="reminder_title_too_short">Insira um título</string>
     <string name="field_is_mandatory">O campo é obrigatório</string>
     <string name="select_date">Selecione a Data</string>
+    <string name="attempt_sync_registry">Tentativa</string>
+    <string name="complete_sync_registry">Concluído</string>
+    <string name="sync_registry_label">Registro de Sincronização</string>
 </resources>
