--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -405,4 +405,99 @@
     <string name="undo">Undo</string>
     <string name="uneverse">UNEVerse</string>
     <string name="available_quota">Amount remaining (approximated)</string>
+    <string name="event_image">Event Image</string>
+    <string name="event_date">Date</string>
+    <string name="event_price_format">R$ %.2f</string>
+    <string name="event_start_time_format">Start at %1$s</string>
+    <string name="event_start_date_format">%1$s at %2$s</string>
+    <string name="event_is_free">Free</string>
+    <string name="event_card_announcement">Here you find all the events that are happening in the university</string>
+    <string name="no_events_created_yet">No events, for now</string>
+    <string name="nav_title_events">Events</string>
+    <string name="publish_your_event_on_unes">Publish your event at UNES for everyone to see</string>
+    <string name="event_continue">Continue</string>
+    <string name="event_publish_approval_message">Before being published all events need to be approved by me. This way no offensive post will happen</string>
+    <string name="event_title_edit_hint">Event Title</string>
+    <string name="event_short_description_edit_hint">Short Description</string>
+    <string name="event_part_one_message">Let\'s start on the beginning</string>
+    <string name="event_basic_information_text">Basic information about the Event</string>
+    <string name="event_title_too_short">Event\'s title must have at least 4 letters</string>
+    <string name="event_short_description_too_short">Event\'s short description must have at least 4 letters</string>
+    <string name="event_part_two_message">Where and when?</string>
+    <string name="event_image_and_more_information">Some more information about the event</string>
+    <string name="event_long_description_hint">Long Description</string>
+    <string name="event_location_hint">Place</string>
+    <string name="event_start_date_hint">Start date</string>
+    <string name="event_start_time_hint">Start Time</string>
+    <string name="event_location">Place</string>
+    <string name="validation_error_format">Must be at least %1$d characters</string>
+    <string name="date_format">%1$s/%2$s/%3$d</string>
+    <string name="time_format">%1$s:%2$s</string>
+    <string name="event_date_start_dialog">Start Date</string>
+    <string name="event_time_start_dialog">Start Time</string>
+    <string name="event_payment_and_certificate">How much it costs and what people get?</string>
+    <string name="event_part_three_message">We are about to finish</string>
+    <string name="event_price_hint">Price</string>
+    <string name="event_hours_hint">Workload</string>
+    <string name="event_ticket_free_cb">The event is free</string>
+    <string name="event_hours_certificate_cb">Does the event provides hours certificate?</string>
+    <string name="event_organization_hint">Organization</string>
+    <string name="event_organization_definition">Organization is the event provider. Eg.: Mathematics DA</string>
+    <string name="double_format">%.2f</string>
+    <string name="integer_format">%1$d</string>
+    <string name="event_invalid_price">Incorrect Price</string>
+    <string name="event_invalid_hours">Invalid Workload</string>
+    <string name="event_failed_parse_number">Did you place a letter where it should be only numbers?</string>
+    <string name="event_picture_selection">Select an image to your event</string>
+    <string name="event_part_four_message">Show it to the world!</string>
+    <string name="event_preview">Preview</string>
+    <string name="cut_event_image">Cut picture</string>
+    <string name="error_creating_image">Failed to edit image :(</string>
+    <string name="event_upload_try_again">Try again</string>
+    <string name="upload_failed">Upload failed</string>
+    <string name="try_again_is_impossible">It\'s not possible to try again</string>
+    <string name="wait_until_image_is_processed">Wait until image is processed</string>
+    <string name="event_preview_message">Checkout your event before you publish</string>
+    <string name="event_confirm_create">Create</string>
+    <string name="preparing_fetch">Preparing...</string>
+    <string name="sagres_is_bugged_again">Sagres is bugged... Again</string>
+    <string name="attempting_alternate_way">Trying alternate way...</string>
+    <string name="development_only_android_5">Under development, only Android 5.0 or higher</string>
+    <string name="setup_your_course">What is your course?</string>
+    <string name="course_answer">See</string>
+    <string name="loading_courses_list">Loading courses list</string>
+    <string name="failed_loading_courses">Failed loading courses :(</string>
+    <string name="course_selection">Course selected</string>
+    <string name="course_selection_help">Selecting your course enables UNES to send you notifications when a teacher or the collegiate sends something. This is a future implementation.</string>
+    <string name="ok">OK</string>
+    <string name="confirm">Confirm</string>
+    <string name="course_selected">You selected %1$s</string>
+    <string name="is_this_your_course">Do you confirm?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="title_select_course">Select course</string>
+    <string name="title_change_course">Select your course</string>
+    <string name="title_change_course_desc">Change the course showed in the app</string>
+    <string name="course_undefined">Undefined course</string>
+    <string name="title_master_configuration">Master Configuration</string>
+    <string name="update_control">Sync Control</string>
+    <string name="event_approval">Event Approval</string>
+    <string name="no_reminders">No active reminders, time to chill!</string>
+    <string name="relax">Chill</string>
+    <string name="show_complete_todo_items">Completed</string>
+    <string name="reminders">Reminders</string>
+    <string name="title_reminders">Reminders</string>
+    <string name="nav_title_reminders">Reminders</string>
+    <string name="create_reminder">Create reminder</string>
+    <string name="reminder_title">Title</string>
+    <string name="reminder_message">Description</string>
+    <string name="reminder_date">Date limit</string>
+    <string name="save_reminder">Save</string>
+    <string name="has_date_limit_reminder">Has date limit?</string>
+    <string name="reminder_title_too_short">Insert a title</string>
+    <string name="field_is_mandatory">This field is required</string>
+    <string name="select_date">Select a date</string>
+    <string name="attempt_sync_registry">Attempt</string>
+    <string name="complete_sync_registry">Succeeded</string>
+    <string name="sync_registry_label">Sync Registry</string>
 </resources>
