--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:locale="pt">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">
 
     <string name="app_name">UNES</string>
     <string name="logo">Logo</string>
