so much stuff going on..

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -517,4 +517,8 @@
     <string name="channel_group_events">Eventos</string>
     <string name="channel_events_general">Notícias Gerais</string>
     <string name="unavailable_in_android_version">Esta função ainda não funciona nesta versão do Android. Aguarde :)</string>
+    <string name="specific_course">Curso específico</string>
+    <string name="what_course_is_this_for">Para qual curso este evento é destinado?</string>
+    <string name="any_course">Todos os cursos</string>
+    <string name="this_may_not_be_supported_yet">Este recurso pode não filtrar corretamente os usuários. Em desenvolvimento</string>
 </resources>
