--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -517,4 +517,8 @@
     <string name="channel_group_events">Events</string>
     <string name="channel_events_general">General News</string>
     <string name="unavailable_in_android_version">This feature is not available in this Android version. It will be up soon :)</string>
+    <string name="specific_course">Specific Course</string>
+    <string name="what_course_is_this_for">Is this event for a specific course?</string>
+    <string name="any_course">All courses</string>
+    <string name="this_may_not_be_supported_yet">This feature may not work as expected and may not filter all users. Under development</string>
 </resources>
