--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -526,4 +526,5 @@
     <string name="unes">UNES</string>
     <string name="no_unes_messages">Nenhuma mensagem do UNES</string>
     <string name="delete_unes_messages">Apagar mensagens UNES</string>
+    <string name="ru_invalid_data">O aplicativo do RU não está funcionando corretamente no momento... :(</string>
 </resources>
