--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -537,4 +537,5 @@
     <string name="pref_show_dce_notifications_enabled">Você está recebendo mensagens do DCE</string>
     <string name="pref_show_dce_notifications">Recados do DCE</string>
     <string name="pref_show_dce_notifications_summary">Controle as notificações do DCE</string>
+    <string name="school_history">Histórico Escolar</string>
 </resources>
