--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -538,4 +538,5 @@
     <string name="pref_show_dce_notifications">Recados do DCE</string>
     <string name="pref_show_dce_notifications_summary">Controle as notificações do DCE</string>
     <string name="school_history">Histórico Escolar</string>
+    <string name="sync_reason_label">R</string>
 </resources>
