--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,6 +158,8 @@
     <string name="acc_event_mark_session">Marcar Sessão</string>
     <string name="event_session_duration_location" translatable="false">%1s / %2s</string>
     <string name="session_duration_location" translatable="false">%1s / %2s</string>
+    <string name="label_option_menu">Opções</string>
+    <string name="siecomp_error_updating_info">Erro ao atualizar informações</string>
 
     <plurals name="duration_hours">
         <item quantity="one">%s hora</item>
